private-datasync-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: AWS DataSync Migration Test for Private Testing
Metadata:
  License:
    Description: |
      Copyright 2019-2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.

  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Security
        Parameters:
          - kp
      - Label:
          default: AMI IDs (do not edit)
        Parameters:
          - dsAmi
    ParameterLabels:
      kp:
        default: 'Access Key Pair:'
      dsAmi:
        default: 'DataSync'

Parameters:
  kp:
    Description: '(NOTE: If you don''t see a key in the list you will need to create
      one from the EC2 console in this region)'
    Type: AWS::EC2::KeyPair::KeyName
  dsAmi:
    Type : 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/datasync/ami'

Resources:
  # Create a dedicated VPC with internet connectivity
  dmVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.13.14.0/25
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: !Join
          - ''
          - - VPC-
            - !Ref 'AWS::StackName'
  dmSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'dmVPC'
      CidrBlock: 10.13.14.0/25
      MapPublicIpOnLaunch: 'False'
      Tags:
      - Key: Name
        Value: !Join
          - ''
          - - Private Subnet-
            - !Ref 'AWS::StackName'
  dmRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'dmVPC'
      Tags:
      - Key: Name
        Value: !Join
          - ''
          - - Route Table-
            - !Ref 'AWS::StackName'
  dmSubnet1RouteAssociaton:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'dmSubnet1'
      RouteTableId: !Ref 'dmRouteTable'

  # We use the same security group for all four resources.  Technically port 80
  # isn't needed for the NFS server and the application server, but nothing is
  # listening on those ports on those servers.
  dmSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for all resources
      VpcId: !Ref 'dmVPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: '0.0.0.0/0'

  # We use this so we can limit access on this port to the SG
  dmSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref 'dmSecurityGroup'
      IpProtocol: tcp
      ToPort: '2049'
      FromPort: '2049'
      SourceSecurityGroupId: !Ref 'dmSecurityGroup'
    DependsOn: dmSecurityGroup

  ssmInterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      VpcEndpointType: Interface
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssm'
      VpcId: !Ref dmVPC
      PrivateDnsEnabled: 'true'
      SubnetIds: 
        - !Ref dmSubnet1
      SecurityGroupIds:
        - !Ref dmSecurityGroup

  ssmmessagesInterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      VpcEndpointType: Interface
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssmmessages'
      VpcId: !Ref dmVPC
      PrivateDnsEnabled: 'true'
      SubnetIds: 
        - !Ref dmSubnet1
      SecurityGroupIds:
        - !Ref dmSecurityGroup

  ec2messagesInterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      VpcEndpointType: Interface
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ec2messages'
      VpcId: !Ref dmVPC
      PrivateDnsEnabled: 'true'
      SubnetIds: 
        - !Ref dmSubnet1
      SecurityGroupIds:
        - !Ref dmSecurityGroup

  datasyncInterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      VpcEndpointType: Interface
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.datasync'
      VpcId: !Ref dmVPC
      PrivateDnsEnabled: 'true'
      SubnetIds: 
        - !Ref dmSubnet1
      SecurityGroupIds:
        - !Ref dmSecurityGroup

  # nfsServerInstanceProfile:
  #   Type: AWS::IAM::InstanceProfile
  #   Properties:
  #     Path: /
  #     Roles:
  #       - !Ref 'nfsServerIamRole'
  # nfsServerIamRole:
  #   Type: AWS::IAM::Role
  #   Properties:
  #     AssumeRolePolicyDocument:
  #       Statement:
  #         - Action:
  #             - sts:AssumeRole
  #           Effect: Allow
  #           Principal:
  #             Service:
  #               - ec2.amazonaws.com
  #       Version: '2012-10-17'
  #     ManagedPolicyArns:
  #       - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
  # nfsServerRolePolicy:
  #   Type: AWS::IAM::Policy
  #   Properties:
  #     PolicyDocument:
  #       Statement:
  #         - Effect: Allow
  #           Action:
  #             - s3:GetObject
  #           Resource:
  #             - arn:aws:s3:::aws-datasync-samples/files/fs1m-small.tar
  #             - arn:aws:s3:::aws-datasync-samples/files/fs500k-small.tar
  #       Version: '2012-10-17'
  #     PolicyName: policy
  #     Roles:
  #       - !Ref 'nfsServerIamRole'
  # nfsServer:
  #   Type: AWS::EC2::Instance
  #   CreationPolicy:
  #     ResourceSignal:
  #       Timeout: PT30M
  #       Count: 1
  #   Metadata:
  #     AWS::CloudFormation::Init:
  #       config:
  #         files:
  #           /opt/aws/cfn/initdata.sh:
  #             content: !Sub |
  #               #!/bin/bash
  #               mkdir -p /mnt/fs1 /mnt/fs2 /mnt/fs3
  #               devs=`lsblk | grep 200G | awk '{ print $1 }'`
  #               fsnum=1
  #               for d in $devs
  #               do
  #                 mkfs.xfs /dev/$d
  #                 mount /dev/$d /mnt/fs$fsnum
  #                 fsnum=$(( fsnum + 1 ))
  #               done
  #               chmod 777 /mnt/fs*
  #               aws s3 cp s3://aws-datasync-samples/files/fs500k-small.tar /mnt/fs1/fs500k-small.tar >> /dev/null
  #               aws s3 cp s3://aws-datasync-samples/files/fs500k-small.tar /mnt/fs2/fs500k-small.tar >> /dev/null
  #               aws s3 cp s3://aws-datasync-samples/files/fs1m-small.tar /mnt/fs3/fs1m-small.tar >> /dev/null
  #               cd /mnt/fs1/ && tar -xf fs500k-small.tar &
  #               cd /mnt/fs2/ && tar -xf fs500k-small.tar &
  #               cd /mnt/fs3/ && tar -xf fs1m-small.tar &
  #               wait
  #               rm -f /mnt/fs1/fs500k-small.tar /mnt/fs2/fs500k-small.tar /mnt/fs3/fs1m-small.tar
  #               echo READY > /home/ec2-user/datasets_ready
  #         commands:
  #           1-initData:
  #             command: "bash /opt/aws/cfn/initdata.sh"
  #           2-finishUp:
  #             command: !Sub "/opt/aws/bin/cfn-signal -e 0 --stack ${AWS::StackId} --resource nfsServer --region ${AWS::Region}"
  #   Properties:
  #     ImageId: !Ref linuxAmi
  #     InstanceType: c5.4xlarge
  #     IamInstanceProfile: !Ref 'nfsServerInstanceProfile'
  #     Tags:
  #       - Key: Name
  #         Value: !Join
  #           - ''
  #           - - NfsServer-
  #             - !Ref 'AWS::StackName'
  #     KeyName: !Ref 'kp'
  #     InstanceInitiatedShutdownBehavior: terminate
  #     BlockDeviceMappings:
  #       - DeviceName: /dev/xvda
  #         Ebs:
  #           VolumeSize: '8'
  #           DeleteOnTermination: 'true'
  #           VolumeType: gp2
  #       - DeviceName: /dev/xvdb
  #         Ebs:
  #           VolumeSize: '200'
  #           DeleteOnTermination: 'true'
  #           VolumeType: gp2
  #       - DeviceName: /dev/xvdc
  #         Ebs:
  #           VolumeSize: '200'
  #           DeleteOnTermination: 'true'
  #           VolumeType: gp2
  #       - DeviceName: /dev/xvdd
  #         Ebs:
  #           VolumeSize: '200'
  #           DeleteOnTermination: 'true'
  #           VolumeType: gp2
  #     NetworkInterfaces:
  #       - AssociatePublicIpAddress: 'true'
  #         DeviceIndex: '0'
  #         GroupSet:
  #           - !Ref 'dmSecurityGroup'
  #         SubnetId: !Ref 'dmSubnet1'
  #     UserData:
  #       Fn::Base64:
  #         !Sub |
  #           #!/bin/bash
  #           /opt/aws/bin/cfn-init -v -s ${AWS::StackId} -r nfsServer --region ${AWS::Region}

  dataSyncAgentInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref 'dataSyncAgentIamRole'
  dataSyncAgentIamRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Action:
              - sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

  dataSyncAgentRolePolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Action:
              - datasync:*
            Resource:
              - '*'
          - Effect: Allow
            Action:
              - iam:PassRole
            Resource:
              - '*'
      PolicyName: policy
      Roles:
        - !Ref 'dataSyncAgentIamRole'

  dataSyncAgent1:
    Type: AWS::EC2::Instance
    # DependsOn:
    #   - ec2messagesInterfaceEndpoint
    #   - ssmmessagesInterfaceEndpoint
    #   - ssmInterfaceEndpoint
    #   - datasyncInterfaceEndpoint
    Properties:
      ImageId: !Ref dsAmi
      InstanceType: m5.2xlarge
      #InstanceType: t3.micro
      IamInstanceProfile: !Ref 'dataSyncAgentInstanceProfile'
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - DataSyncAgent1-
              - !Ref 'AWS::StackName'
      KeyName: !Ref 'kp'
      InstanceInitiatedShutdownBehavior: stop
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: '80'
            DeleteOnTermination: 'true'
            VolumeType: gp2
      NetworkInterfaces:
        - DeviceIndex: '0'
          GroupSet:
            - !Ref 'dmSecurityGroup'
          SubnetId: !Ref 'dmSubnet1'

  # dataSyncAgent2:
  #   Type: AWS::EC2::Instance
  #   Properties:
  #     ImageId: !Ref dsAmi
  #     InstanceType: m5.2xlarge
  #     IamInstanceProfile: !Ref 'dataSyncAgentInstanceProfile'
  #     Tags:
  #       - Key: Name
  #         Value: !Join
  #           - ''
  #           - - DataSyncAgent2-
  #             - !Ref 'AWS::StackName'
  #     KeyName: !Ref 'kp'
  #     InstanceInitiatedShutdownBehavior: stop
  #     BlockDeviceMappings:
  #       - DeviceName: /dev/xvda
  #         Ebs:
  #           VolumeSize: '80'
  #           DeleteOnTermination: 'true'
  #           VolumeType: gp2
  #     NetworkInterfaces:
  #       - AssociatePublicIpAddress: 'true'
  #         DeviceIndex: '0'
  #         GroupSet:
  #           - !Ref 'dmSecurityGroup'
  #         SubnetId: !Ref 'dmSubnet1'

Outputs:
  # nfsServerPrivateIP:
  #   Description: NFS Server Private IP Address
  #   Value: !GetAtt nfsServer.PrivateIp
  # dataSyncAgent1PublicIP:
  #   Description: DataSync Agent 1 - Public IP Address
  #   Value: !GetAtt dataSyncAgent1.PublicIp
  dataSyncAgent1PrivateIP:
    Description: DataSync Agent 1 - Private IP Address
    Value: !GetAtt dataSyncAgent1.PrivateIp
  # dataSyncAgent2PublicIP:
  #   Description: DataSync Agent 2 - Public IP Address
  #   Value: !GetAtt dataSyncAgent2.PublicIp
  # dataSyncAgent2PrivateIP:
  #   Description: DataSync Agent 2 - Private IP Address
  #   Value: !GetAtt dataSyncAgent2.PrivateIp
